<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item
        android:id="@+id/fakeCall"
        android:title="@string/FAKE_CALL">
    </item>

    <item
        android:id="@+id/firstaid"
        android:title="@string/FIRST_AID">
    </item>
    <item
        android:id="@+id/manual"
        android:title="@string/SELFDEFENSE_MANUAL">
    </item>

    <item
        android:id="@+id/feedback"
        android:title="@string/FEEDBACK">
    </item>

    <item
        android:id="@+id/help"
        android:title="@string/HELP">
    </item>
    <item
        android:id="@+id/about"
        android:title="@string/ABOUT_US">
    </item>

    <item
        android:id="@+id/logout"
        android:title="@string/LOGOUT">
    </item>
</menu>