<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EDIT_DETAILS"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:orientation="vertical"
        android:clipToPadding="false"
        >


        <EditText
                style="@style/EditTextStyle"
                android:layout_marginTop="20dp"
                android:id="@+id/mail"
                android:hint="@string/EMAIL_ADDRESS"
                android:inputType="textEmailAddress"
                />


        <LinearLayout
            style="@style/LinearLayoutStyle" />

            <EditText
                style="@style/EditTextStyle"
                android:layout_marginTop="20dp"
                android:id="@+id/mobile"
                android:hint="@string/MOBILE_NUMBER"
                android:inputType="phone"
                />

        <LinearLayout
            style="@style/LinearLayoutStyle" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:text="@string/EDIT"
            android:layout_marginTop="30dp"
            android:onClick="editDetails"
            />
    </LinearLayout>
</LinearLayout>