<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:clipToPadding="false"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title"
            android:text="@string/LOGIN"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <EditText
            style="@style/EditTextStyle"
            android:hint="@string/USERNAME"
            android:inputType="text"
            android:id="@+id/userName"
            android:layout_marginTop="10dp"
            />

        <LinearLayout
            style="@style/LinearLayoutStyle" />

        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/password"
            android:hint="@string/PASSWORD"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            />
        <LinearLayout
            style="@style/LinearLayoutStyle" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/LOGIN"
            android:onClick="login"
            />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/FORGOT_PASSWORD"
            android:onClick="forgotPassword"
            />

        <Button
            style="@style/ButtonStyle"
            android:text="@string/REGISTER"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="#00000000"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:onClick="registerUser"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</LinearLayout>