<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android" >
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:clipToPadding="false"
        android:layout_marginTop="30dp"
        >

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:text="@string/CONFIGURE_CONTACTS"
            android:onClick="configureContacts"
            android:padding="15dp"
            android:drawableLeft="@drawable/configure_contact"
            />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:text="@string/CONFIGURE_SMS"
            android:onClick="configureSMS"
            android:padding="15dp"
            android:drawableLeft="@drawable/configure_sms"
            />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:text="@string/CONFIGURE_ALARM"
            android:onClick="configureAlarm"
            android:padding="15dp"
            android:drawableLeft="@drawable/configure_alarm"

            />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:text="@string/EDIT_PROFILE"
            android:onClick="editProfile"
            android:padding="15dp"
            android:drawableLeft="@drawable/editprofile"

            />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_marginTop="30dp"
            android:text="@string/CHANGE_PASSWORD"
            android:onClick="changePassword"
            android:padding="15dp"
            android:drawableLeft="@drawable/password"

            />
    </LinearLayout>
</LinearLayout>
</ScrollView>