<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:background="@android:color/white"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/APP_NAME"
        android:textColor="@color/background"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="sans-serif-smallcaps"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/VERSION"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="@color/background"
        android:textStyle="bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LOADING"
        android:textColor="@color/buttonTextColor"
        android:textSize="18sp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        />
</LinearLayout>