<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CHANGE_PASSWORD"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical"
        android:clipToPadding="false"
        >

        <EditText
            style="@style/EditTextStyle"
            android:layout_marginTop="20dp"
            android:id="@+id/oldPassword"
            android:hint="@string/OLD_PASSWORD"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"/>

        <LinearLayout
            style="@style/LinearLayoutStyle" />

            <EditText
                style="@style/EditTextStyle"
                android:layout_marginTop="20dp"
                android:id="@+id/newPassword"
                android:hint="@string/NEW_PASSWORD"
                android:inputType="textPassword"
                android:fontFamily="sans-serif"/>

        <LinearLayout
            style="@style/LinearLayoutStyle" />

        <EditText
            style="@style/EditTextStyle"
            android:layout_marginTop="20dp"
            android:hint="@string/CONFIRM_NEW_PASSWORD"
            android:id="@+id/confirmNewPassword"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"/>

        <LinearLayout
            style="@style/LinearLayoutStyle" />

        <Button
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:text="@string/CHANGE_PASSWORD"
            android:layout_marginTop="20dp"
            android:onClick="changePassword"
            />
    </LinearLayout>
</LinearLayout>